k8s/ingress/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: gateway-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: gateway
            port:
              number: 8080
        pathType: Prefix
status:
  loadBalancer: {}
